<resources>
    <string name="app_name">English Training Quizzes</string>
    <string name="question_quiz">Question</string>
    <string name="option_a_quiz">Option A</string>
    <string name="option_b_quiz">Option B</string>
    <string name="option_c_quiz">Option C</string>
    <string name="score_quiz">Score:</string>
    <string name="score_counter_quiz">0</string>
    <string name="quit_quiz_activity">Quit</string>
    <string name="quit_final_score">Quit</string>
    <string name="headline_final_score">Your final score is:</string>
    <string name="score_counter_final_score">0</string>
    <string name="subject_phrasal_verb_menu">Phrasal Verbs</string>
    <string name="subject_preposition_menu">Prepositions</string>
    <string name="right_answer">Right Answer</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="next_question">Next Question</string>
    <string name="chosen_option_warning_icon">Chosen option warning icon</string>
    <string name="next_question_icon">Next task icon</string>
    <string name="try_again">Try Again</string>
    <string name="level_menu_easy">Easy mode (A1/A2)</string>
    <string name="level_menu_medium">Medium mode (B1/B2)</string>
    <string name="level_menu_hard">Hard mode (C1/C2)</string>
    <string name="back_to_main_menu">Back to main menu</string>
    <string name="menu_level_prompt">Choose a level</string>
    <string name="menu_subjects_prompt">Choose a subject</string>
    <string name="feedback_instructions">Send your experience and doubts about English Training Quizzes. We will use the information to enhance the user experience. You must have an e-mail client (such as Gmail) configured on your device.</string>
    <string name="feedback_edit_text_hint">Write your feedback here</string>
    <string name="feedback_banner_message">Leave your feedback! ;)</string>
    <string name="english_training_quizzes_feedback_logo">English Training Quizzes Feedback logo</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_user">Register user</string>
    <string name="action_register_user_short">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_menu_feedback">Feedback</string>
    <string name="action_menu_about">About</string>
    <string name="action_menu_averages">Averages</string>
    <string name="action_menu_logoff">Log off</string>
    <string name="action_menu_quit_app">Quit app</string>
    <string name="msg_subscribed">Device subscribed to topic file_checksum</string>
    <string name="msg_subscribed_failed">It was not possible to subscribe to topic</string>
    <string name="admob_ca_app_pub">ca-app-pub-2370319903588478~4186701959</string>
    <string name="admob_quiz_banner_ca_app_pub">ca-app-pub-2370319903588478/9186573731</string>
    <string name="admob_quiz_banner_ca_app_pub_test">"ca-app-pub-3940256099942544/6300978111"</string>
    <string name="average_cardview_subject_label">Subject:</string>
    <string name="average_cardview_level_label">Level:</string>
    <string name="average_cardview_average_label">Average:</string>
    <string name="average_fragment_user_label">User:</string>
    <string name="action_menu_averages_delete_user">Delete my account</string>

</resources>
